# pharmacy

./: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml
backend/: settings.py  urls.py
main/: admin.py  models.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_alter_medicine_address_alter_medicine_company_and_more.py
static/js/: main.802c276f.js  main.802c276f.js.map  main.da3ff560.js  main.da3ff560.js.map  main.fb8f78d1.js
