[tool.poetry]
name = "pharmacy"
version = "0.1.0"
description = ""
authors = ["sergb <uzellessmovic@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
setuptools = "^75.5.0"
django = "^5.1.3"
gunicorn = "^23.0.0"
requests = "^2.32.3"
bs4 = "^0.0.2"
whitenoise = "^6.8.2"
psycopg2 = "^2.9.10"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"


[tool.poetry.group.test.dependencies]
isort = "^5.13.2"
black = "^24.10.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
